# boid

./: CMakeLists.txt  backup.txt
include/: bird.hpp  camera.hpp  circle.hpp  lib.hpp  obstacle.hpp  shader.hpp  win_manager.hpp
src/: bird.cpp  lib.cpp  main.cpp  win_manager.cpp
src/shaders/fs/: single_color.frag
src/shaders/vs/: 2d_simple.vert  simple.vert
